--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["app/*"],
+      "@lib/*": ["lib/*"]
     }
   },
   "include": [
