--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/" }
+    "builds": [
+      { "src": "package.json", "use": "@vercel/next" }
+    ],
+    "routes": [
+      { "src": "/(.*)", "dest": "/" }
     ]
   }
   
