--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.552.0",
     "next": "^16.0.1",
     "node-fetch": "^3.3.2",
+    "node-localstorage": "^3.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^3.3.0",
