--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/browser": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
+    "@capacitor/ios": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@headlessui/react": "^2.2.9",
     "axios": "^1.13.1",
