--- a/package.json
+++ b/package.json
@@ -25,21 +25,19 @@
     "node-localstorage": "^3.0.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "recharts": "^3.3.0",
-    "tailwind": "^4.0.0"
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@capacitor/cli": "4.8.0",
-    "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "^10.4.24",
     "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
