Add Codemagic iOS workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -25,8 +25,12 @@ workflows:
         script: |
           npx cap sync ios
 
-      - name: CocoaPods clean install (fix pods embed frameworks)
+      - name: CocoaPods clean install + greadlink fix
         script: |
+          # Fix: Pods script expects greadlink (GNU readlink). macOS runner has readlink only.
+          sudo mkdir -p /usr/local/bin
+          sudo ln -sf /usr/bin/readlink /usr/local/bin/greadlink || true
+
           cd ios/App
           rm -rf Pods Podfile.lock
           pod repo update
@@ -37,7 +41,7 @@ workflows:
         script: |
           set -euo pipefail
 
-          # export options
+          # Create exportOptions.plist dynamically
           cat > export_options.plist <<'EOF'
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
@@ -59,7 +63,7 @@ workflows:
           rm -rf build
           mkdir -p build
 
-          # Archive (guardar log para ver el error real si falla)
+          # Archive
           xcodebuild \
             -workspace ios/App/App.xcworkspace \
             -scheme App \
