Add Codemagic iOS workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -28,7 +28,7 @@ workflows:
           set -euo pipefail
           npx cap sync ios
 
-      - name: Install CocoaPods (no rbenv) + Pods install
+      - name: Ruby + CocoaPods (bypass rbenv) + Pods install
         script: |
           set -euo pipefail
 
@@ -36,27 +36,50 @@ workflows:
           sudo mkdir -p /usr/local/bin
           sudo ln -sf /usr/bin/readlink /usr/local/bin/greadlink || true
 
-          echo "Ruby:"
-          ruby -v
+          # ---- Bypass rbenv shims ----
+          # Remove rbenv-related env vars if present
+          unset RBENV_VERSION RBENV_ROOT RBENV_SHELL || true
 
-          echo "Gem:"
-          gem -v
+          # Reset PATH to avoid rbenv shims taking precedence
+          export PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"
 
-          # Install CocoaPods via RubyGems to avoid rbenv wrapper issues
-          sudo gem install cocoapods -N
+          echo "Which ruby (PATH):"
+          command -v ruby || true
 
-          echo "Pod:"
+          # Prefer system Ruby if available
+          if [ -x /usr/bin/ruby ] && [ -x /usr/bin/gem ]; then
+            RUBY_BIN="/usr/bin/ruby"
+            GEM_BIN="/usr/bin/gem"
+          else
+            echo "System Ruby not found. Installing Ruby via Homebrew..."
+            command -v brew >/dev/null 2>&1 || (echo "Homebrew not found on runner" && exit 1)
+            brew update
+            brew install ruby
+            RUBY_PREFIX="$(brew --prefix ruby)"
+            RUBY_BIN="$RUBY_PREFIX/bin/ruby"
+            GEM_BIN="$RUBY_PREFIX/bin/gem"
+            export PATH="$RUBY_PREFIX/bin:$PATH"
+          fi
+
+          echo "Ruby version:"
+          "$RUBY_BIN" -v
+          echo "Gem version:"
+          "$GEM_BIN" -v
+
+          # Install CocoaPods via gems (no rbenv)
+          sudo "$GEM_BIN" install cocoapods -N
+
+          echo "Pod version:"
           pod --version
 
+          # Pods install
           cd ios/App
           rm -rf Pods Podfile.lock
-
           pod repo update
           pod install --repo-update
 
-          # HARD CHECK: fail if xcconfig didn't get generated
+          # Ensure xcconfig exists (avoid later archive error)
           test -f "Pods/Target Support Files/Pods-App/Pods-App.release.xcconfig"
-
           cd ../..
 
       - name: Build IPA
