--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,6 +53,11 @@ workflows:
           # Fix rsync symlink issue in CocoaPods frameworks script
           sed -i '' 's/--links/--copy-links/g' "Pods/Target Support Files/Pods-App/Pods-App-frameworks.sh" || true
           cd ../..
+      - name: Increment build number
+        script: |
+          cd ios/App
+          agvtool new-version -all $BUILD_NUMBER
+          cd ../..
 
       - name: Archive + Export IPA (manual signing)
         script: |
