Add Codemagic iOS workflow

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,6 +53,7 @@ workflows:
           # Fix rsync symlink issue in CocoaPods frameworks script
           sed -i '' 's/--links/--copy-links/g' "Pods/Target Support Files/Pods-App/Pods-App-frameworks.sh" || true
           cd ../..
+
       - name: Force numeric CFBundleVersion (all Info.plist)
         script: |
           set -euo pipefail
@@ -63,12 +64,11 @@ workflows:
           find ios -name "Info.plist" -print
 
           while IFS= read -r PLIST; do
-            echo "-> Setting in $PLIST"
+            echo "-> Setting CFBundleVersion in $PLIST"
             /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $BUILD_NUM" "$PLIST" 2>/dev/null \
               || /usr/libexec/PlistBuddy -c "Add :CFBundleVersion string $BUILD_NUM" "$PLIST"
             /usr/libexec/PlistBuddy -c "Print :CFBundleVersion" "$PLIST" || true
           done < <(find ios -name "Info.plist")
-
 
       - name: Archive + Export IPA (manual signing)
         script: |
@@ -77,7 +77,10 @@ workflows:
           rm -rf build
           mkdir -p build/ipa
 
-          # 1) Archive
+          BUILD_NUM="${CM_BUILD_NUMBER:-$CM_BUILD_ID}"
+          echo "Archiving with BUILD_NUM=$BUILD_NUM"
+
+          # 1) Archive (force numeric build number at build-settings level too)
           xcodebuild \
             -workspace ios/App/App.xcworkspace \
             -scheme App \
@@ -86,9 +89,10 @@ workflows:
             -destination "generic/platform=iOS" \
             -archivePath build/App.xcarchive \
             COMPILER_INDEX_STORE_ENABLE=NO \
+            CURRENT_PROJECT_VERSION="$BUILD_NUM" \
             archive | tee build/xcodebuild_archive.log
 
-          # 2) Create a VALID exportOptions.plist via plutil (no “No Accounts”)
+          # 2) Create a VALID exportOptions.plist via plutil
           cat > build/export_options.json <<'EOF'
           {
             "method": "app-store-connect",
@@ -115,17 +119,22 @@ workflows:
 
           echo "IPAs found:"
           find build -name "*.ipa" -print || true
-          # 4) Verify CFBundleVersion INSIDE the IPA
-          
+
+          # 4) Verify CFBundleVersion INSIDE the IPA (must be numeric)
           IPA_PATH="$(ls -1 build/ipa/*.ipa | head -n 1)"
           echo "IPA: $IPA_PATH"
           TMPDIR="$(mktemp -d)"
           unzip -q "$IPA_PATH" -d "$TMPDIR"
-          APP_PLIST="$(find "$TMPDIR/Payload" -name "Info.plist" | head -n 1)"
+
+          APP_PLIST="$TMPDIR/Payload/App.app/Info.plist"
           echo "App plist in IPA: $APP_PLIST"
-          echo "CFBundleVersion in IPA:"
+
+          echo "CFBundleShortVersionString:"
+          /usr/libexec/PlistBuddy -c "Print :CFBundleShortVersionString" "$APP_PLIST"
+          echo "CFBundleVersion:"
           /usr/libexec/PlistBuddy -c "Print :CFBundleVersion" "$APP_PLIST"
 
+          echo "OK: IPA contains numeric CFBundleVersion."
 
     artifacts:
       - build/ipa/*.ipa
