--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -28,6 +28,13 @@ workflows:
           set -euo pipefail
           npx cap sync ios
 
+      - name: Compute numeric build number (automatic)
+        script: |
+          set -euo pipefail
+          # Always valid for Apple: 1-3 dot-separated integers. We use a single integer (unix timestamp).
+          echo "BUILD_NUM=$(date +%s)" >> "$CM_ENV"
+          echo "BUILD_NUM=$BUILD_NUM"
+
       - name: Install Ruby (brew) + CocoaPods + Pods install + Patch rsync links
         script: |
           set -euo pipefail
@@ -57,7 +64,6 @@ workflows:
       - name: Force numeric CFBundleVersion (all Info.plist)
         script: |
           set -euo pipefail
-          BUILD_NUM="${CM_BUILD_NUMBER:-$CM_BUILD_ID}"
           echo "Using BUILD_NUM=$BUILD_NUM"
 
           echo "Info.plist files:"
@@ -77,7 +83,6 @@ workflows:
           rm -rf build
           mkdir -p build/ipa
 
-          BUILD_NUM="${CM_BUILD_NUMBER:-$CM_BUILD_ID}"
           echo "Archiving with BUILD_NUM=$BUILD_NUM"
 
           # 1) Archive (force numeric build number at build-settings level too)
@@ -92,7 +97,7 @@ workflows:
             CURRENT_PROJECT_VERSION="$BUILD_NUM" \
             archive | tee build/xcodebuild_archive.log
 
-          # 2) Create a VALID exportOptions.plist via plutil
+          # 2) Create exportOptions.plist via plutil
           cat > build/export_options.json <<'EOF'
           {
             "method": "app-store-connect",
@@ -126,6 +131,7 @@ workflows:
           TMPDIR="$(mktemp -d)"
           unzip -q "$IPA_PATH" -d "$TMPDIR"
 
+          # NOTE: Your app bundle is Payload/App.app in your logs
           APP_PLIST="$TMPDIR/Payload/App.app/Info.plist"
           echo "App plist in IPA: $APP_PLIST"
 
